--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ log = "0.4"
 env_logger = "0.11.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9.34+deprecated"
 tokio = { version = "1", features = ["full"] }
 tokio-modbus = "0.13.1"
+redis = { version = "0.25.4", features = ["aio", "async-std-comp"] }
+async-std = { version = "1", features = ["attributes"] }
+
+
 
